# py-app-foundation

./: .copilot-instructions.md  .editorconfig  .gitignore  .instructions.md  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  TEMPLATE_CONTRIBUTING.md  TEMPLATE_DECISIONS.md  TEMPLATE_ROADMAP.md  cspell.json  pyproject.toml
.github/agents/: code-reviewer.agent.md  docs-writer.agent.md  security-auditor.agent.md  test-writer.agent.md
.github/skills/dependency-management/: SKILL.md
.github/skills/docstring-generation/: SKILL.md
.github/skills/github-actions/: SKILL.md
.github/skills/observability/: SKILL.md
.github/skills/pydantic-models/: SKILL.md
.github/skills/python-api-endpoint/: SKILL.md
.github/skills/python-api-endpoint/templates/: all-templates.md  all-templates.py
.github/skills/python-cli-overlay/: SKILL.md
.github/skills/python-refactor/: SKILL.md
.github/skills/python-testing/: SKILL.md
.github/skills/python-testing/templates/: conftest-template.py
.github/skills/security-audit/: SKILL.md
.github/workflows/: ci.yml  release-guard.yml  security.yml
docs/guide/: bootstrap-generation-playbook.md  cli-command-contract.md  contributing.md  index.md  maintenance-guidelines.md  new-project.md  release-checklist.md  ui-overlay-contract.md
docs/plan/: ARCHITECTURE.md  DECISIONS.md  ROADMAP.md  SESSION_LOG.md  app-spec-luminara.md  app-spec.md
src/starter/: .cli.instructions.md  __init__.py  api_overlay.py  cli.SKILL.md  cli.py  config.py  exceptions.py  logging.py  ui.py  worker_overlay.py
src/starter/api/: .instructions.md  README.md  SKILL.md  app.py
src/starter/ui/: .instructions.md  SKILL.md
src/starter/ui/desktop/: README.md  app.py
src/starter/ui/mobile/: README.md  app.py
src/starter/ui/shared/: README.md  design-tokens.css
src/starter/ui/web/: README.md  app.js  index.html  styles.css
src/starter/worker/: .instructions.md  README.md  SKILL.md  app.py
tests/: conftest.py
tests/integration/: __init__.py  test_api_smoke.py  test_cli_smoke.py  test_starter_smoke.py  test_ui_desktop_smoke.py  test_ui_mobile_smoke.py  test_ui_smoke.py  test_worker_smoke.py
tests/unit/: __init__.py  test_api.py  test_cli.py  test_config.py  test_exceptions.py  test_logging.py  test_ui.py  test_ui_desktop.py  test_ui_mobile.py  test_worker.py
