[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-app-foundation"
version = "0.2.1"
description = "A reusable, professional Python app foundation for building secure, well-designed applications"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Py App Foundation Contributors" }]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["pydantic>=2.0", "pydantic-settings>=2.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "pyright>=1.1",
    "bandit>=1.7",
    "pip-audit>=2.6",
    "pre-commit>=3.4",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "pyright>=1.1",
    "bandit>=1.7",
    "pip-audit>=2.6",
    "pre-commit>=3.4",
]

[project.urls]
Repository = "https://github.com/marcgris/py-app-foundation"
Documentation = "https://github.com/marcgris/py-app-foundation/tree/main/docs"
Issues = "https://github.com/marcgris/py-app-foundation/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/starter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/starter --cov-report=term-missing --cov-fail-under=80"
python_files = ["test_*.py", "*_test.py"]

[tool.coverage.run]
source = ["src/starter"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "BLE",
    "C4",
    "PIE",
    "RET",
    "PERF",
    "PLW",
]
ignore = ["PLW2901"]
exclude = [".git", ".venv", "venv", "__pycache__", "build", "dist"]

[tool.ruff.lint.isort]
known-first-party = ["starter"]
known-third-party = ["pydantic"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F841"] # Unused variables in tests are okay

[tool.pyright]
include = ["src/starter", "tests"]
exclude = [".venv", "venv", ".git"]
typeCheckingMode = "strict"
reportUnusedImport = true
reportUnusedVariable = true
reportMissingTypeStubs = false
reportPrivateUsage = "warning"
reportUnknownArgumentType = "warning"
pythonVersion = "3.14"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
